@@ -1,5 +1,6 @@
 package cn.enaium.paramorphism.decrypt;
 
+import cn.enaium.paramorphism.decrypt.util.IOUtils;
 import cn.enaium.paramorphism.decrypt.util.JFileChooserUtil;
 import cn.enaium.paramorphism.decrypt.util.Utils;
 
@@ -11,6 +12,8 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.Enumeration;
+import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
 
@@ -30,9 +33,9 @@ public class ParamorphismDecrypt extends JFrame {
         setResizable(false);
         setLocationRelativeTo(null);
         setLayout(null);
-        var jMenuBar = new JMenuBar();
-        var jMenu = new JMenu("About");
-        var gitHub = new JMenuItem("GitHub");
+        JMenuBar jMenuBar = new JMenuBar();
+        JMenu jMenu = new JMenu("About");
+        JMenuItem gitHub = new JMenuItem("GitHub");
         gitHub.addActionListener(e -> {
             try {
                 Desktop.getDesktop().browse(new URI("https://github.com/Enaium/ParamorphismDecrypt"));
@@ -41,33 +44,42 @@ public class ParamorphismDecrypt extends JFrame {
             }
         });
         jMenu.add(gitHub);
+        JMenuItem qianXiaGithub = new JMenuItem("Jre1.8GitHub");
+        qianXiaGithub.addActionListener(e -> {
+            try {
+                Desktop.getDesktop().browse(new URI("https://github.com/L0serQianXia/ParamorphismDecrypt-jre8"));
+            } catch (IOException | URISyntaxException exception) {
+                exception.printStackTrace();
+            }
+        });
+        jMenu.add(qianXiaGithub);
         jMenuBar.add(jMenu);
         setJMenuBar(jMenuBar);
-        var inputLabel = new JLabel("Input Jar:");
+        JLabel inputLabel = new JLabel("Input Jar:");
         inputLabel.setBounds(5, 5, 70, 20);
         add(inputLabel);
-        var inputTextField = new JTextField();
+        JTextField inputTextField = new JTextField();
         inputTextField.setBounds(70, 5, 270, 20);
         add(inputTextField);
-        var inputButton = new JButton("...");
+        JButton inputButton = new JButton("...");
         inputButton.setBounds(350, 5, 30, 20);
         add(inputButton);
 
-        var outputLabel = new JLabel("Output Jar:");
+        JLabel outputLabel = new JLabel("Output Jar:");
         outputLabel.setBounds(5, 30, 70, 20);
         add(outputLabel);
-        var outputTextField = new JTextField();
+        JTextField outputTextField = new JTextField();
         outputTextField.setBounds(70, 30, 270, 20);
         add(outputTextField);
-        var outputButton = new JButton("...");
+        JButton outputButton = new JButton("...");
         outputButton.setBounds(350, 30, 30, 20);
         add(outputButton);
-        var decryptButton = new JButton("Decrypt");
+        JButton decryptButton = new JButton("Decrypt");
         add(decryptButton);
         decryptButton.setBounds(5, 60, 375, 30);
 
         inputButton.addActionListener(e -> {
-            var show = JFileChooserUtil.show(JFileChooserUtil.Type.OPEN);
+            File show = JFileChooserUtil.show(JFileChooserUtil.Type.OPEN);
             if (show != null) {
                 inputTextField.setText(show.getPath());
                 outputTextField.setText(show.getParent() + File.separator + show.getName().substring(0, show.getName().lastIndexOf(".")) + "-Decrypt" + show.getName().substring(show.getName().lastIndexOf(".")));
@@ -75,7 +87,7 @@ public class ParamorphismDecrypt extends JFrame {
         });
 
         outputButton.addActionListener(e -> {
-            var show = JFileChooserUtil.show(JFileChooserUtil.Type.SAVE);
+            File show = JFileChooserUtil.show(JFileChooserUtil.Type.SAVE);
             if (show != null) {
                 outputTextField.setText(show.getPath());
             }
@@ -83,11 +95,11 @@ public class ParamorphismDecrypt extends JFrame {
 
         decryptButton.addActionListener(e -> {
             try {
-                var jarFile = new JarFile(inputTextField.getText());
-                var jarOutStream = new JarOutputStream(new BufferedOutputStream(new FileOutputStream(outputTextField.getText())));
-                var entries = jarFile.entries();
+                JarFile jarFile = new JarFile(inputTextField.getText());
+                JarOutputStream jarOutStream = new JarOutputStream(new BufferedOutputStream(new FileOutputStream(outputTextField.getText())));
+                Enumeration<JarEntry> entries = jarFile.entries();
                 while (entries.hasMoreElements()) {
-                    var jarEntry = entries.nextElement();
+                    JarEntry jarEntry = entries.nextElement();
                     String name;
                     if (jarEntry.getName().endsWith(".class")) {
                         name = jarEntry.getName();
@@ -98,16 +110,15 @@ public class ParamorphismDecrypt extends JFrame {
                             || jarEntry.getName().endsWith(".class/name")) {
                         continue;
                     } else {
-                        Utils.otherThings.put(jarEntry.getName(), jarFile.getInputStream(jarEntry).readAllBytes());
+                        Utils.otherThings.put(jarEntry.getName(), IOUtils.toByteArray(jarFile.getInputStream(jarEntry)));
                         continue;
                     }
-                    Utils.readClass(name, jarFile.getInputStream(jarEntry).readAllBytes());
+                    Utils.readClass(name, IOUtils.toByteArray(jarFile.getInputStream(jarEntry)));
                 }
 
                 // Decrypt the encrypted class created by Paramorphism.
                 int decrypted = Utils.findAndDecrypt();
                 Utils.remap();
-
                 Utils.writeFile(jarOutStream);
                 jarFile.close();
 
